src/objects/Opportunity/fields/Adjusted_Opportunity_Value2__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Opportunity_Value2__c</fullName>
    <label>Adjusted Opportunity Value - New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>