src/objects/Opportunity/fields/Assumptions_Attached__c.field-meta.xml
<CustomField>
    <fullName>Assumptions_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When an Account Manager has Assumptions that he has either quoted or been advised check this box.  Attach assumptions to opportunity for tracking purposes.</description>
    <inlineHelpText>When an Account Manager has Assumptions that he has either quoted or been advised check this box.  Attach assumptions to opportunity for tracking purposes.</inlineHelpText>
    <label>Assumptions Attached</label>
    <type>Checkbox</type>
</CustomField>