src/objects/Opportunity/fields/Business_Unit_Name_Product_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name_Product_Rollup__c</fullName>
    <description>Created for territory management.</description>
    <label>Business Unit Name (Product Rollup)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>