src/objects/Opportunity/fields/Capital_Investments__c.field-meta.xml
<CustomField>
    <fullName>Capital_Investments__c</fullName>
    <label>Capital Investments</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>