src/objects/Opportunity/fields/cloneCount__c.field-meta.xml
<CustomField>
    <fullName>cloneCount__c</fullName>
    <label>cloneCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>