src/objects/Opportunity/fields/CLose_Date_Month_Number__c.field-meta.xml
<CustomField>
    <fullName>CLose_Date_Month_Number__c</fullName>
    <formula>MONTH(CloseDate)</formula>
    <label>CLose Date Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>