src/objects/Opportunity/fields/Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Month__c</fullName>
    <formula>IF(CLose_Date_Month_Number__c = 1, &quot;January&quot;, 
IF(CLose_Date_Month_Number__c = 2, &quot;February&quot;,
IF(CLose_Date_Month_Number__c = 3, &quot;March&quot;,
IF(CLose_Date_Month_Number__c = 4, &quot;April&quot;,
IF(CLose_Date_Month_Number__c = 5, &quot;May&quot;,
IF(CLose_Date_Month_Number__c = 6, &quot;June&quot;,
IF(CLose_Date_Month_Number__c = 7, &quot;July&quot;,
IF(CLose_Date_Month_Number__c = 8, &quot;August&quot;,
IF(CLose_Date_Month_Number__c = 9, &quot;September&quot;,
IF(CLose_Date_Month_Number__c = 10, &quot;October&quot;,
IF(CLose_Date_Month_Number__c = 11, &quot;November&quot;,
IF(CLose_Date_Month_Number__c = 12, &quot;December&quot;, &quot;N/A&quot;))))))))))))</formula>
    <label>Close Month</label>
    <type>Text</type>
</CustomField>