src/objects/Opportunity/fields/Collect_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Collect_Account_Number__c</fullName>
    <description>Customer shipping account number to bill.</description>
    <inlineHelpText>Customer shipping account number to bill.</inlineHelpText>
    <label>Collect Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>