src/objects/Opportunity/fields/Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Text__c</fullName>
    <description>info from a converted lead</description>
    <inlineHelpText>Information from a converted lead.</inlineHelpText>
    <label>Contact Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>