src/objects/Opportunity/fields/Contract_Review_Checklist_Completed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Checklist_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Review Checklist Completed</label>
    <type>Checkbox</type>
</CustomField>