src/objects/Opportunity/fields/Created_w_Clone_with_Products_Button__c.field-meta.xml
<CustomField>
    <fullName>Created_w_Clone_with_Products_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create for interim use until custom solution is developed.</description>
    <label>Created w/ &quot;Clone with Products&quot; Button</label>
    <type>Checkbox</type>
</CustomField>