src/objects/Opportunity/fields/Current_User_is_RSM__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_RSM__c</fullName>
    <formula>if($User.Id = RSM__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is RSM</label>
    <type>Checkbox</type>
</CustomField>