src/objects/Opportunity/fields/Cust_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Cust_Tracking__c</fullName>
    <label>Cust Tracking #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>