src/objects/Opportunity/fields/Design_Registration__c.field-meta.xml
<CustomField>
    <fullName>Design_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Registration</label>
    <type>Checkbox</type>
</CustomField>