src/objects/Opportunity/fields/Do_not_partial_c__c.field-meta.xml
<CustomField>
    <fullName>Do_not_partial_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do_not_partial__c</label>
    <type>Checkbox</type>
</CustomField>