src/objects/Opportunity/fields/DR_Contact__c.field-meta.xml
<CustomField>
    <fullName>DR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DR Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opptys / DRs</relationshipLabel>
    <relationshipName>Opptys_DRs</relationshipName>
    <type>Lookup</type>
</CustomField>