src/objects/Opportunity/fields/DR_Status__c.field-meta.xml
<CustomField>
    <fullName>DR_Status__c</fullName>
    <label>DR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Lost/Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>