src/objects/Opportunity/fields/DR_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Type__c</fullName>
    <label>DR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design/Fulfillment</fullName>
            </value>
            <value>
                <fullName>Design Only</fullName>
            </value>
            <value>
                <fullName>Fulfillment Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>