src/objects/Opportunity/fields/Drop_Ship__c.field-meta.xml
<CustomField>
    <fullName>Drop_Ship__c</fullName>
    <inlineHelpText>Drop Ship information to be merged onto NAPO</inlineHelpText>
    <label>Drop Ship</label>
    <type>TextArea</type>
</CustomField>