src/objects/Opportunity/fields/Duplicate_Design_Registration__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Design_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to Identify Duplicate Design Registration 
(Customer Part Numbers of  OLI of Current record are same with Customer Part Numbers of  OLI of Current Lookup)</description>
    <label>Duplicate Design Registration</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Duplicate Design Registration</relationshipLabel>
    <relationshipName>Opptys_DRs</relationshipName>
    <type>Lookup</type>
</CustomField>