src/objects/Opportunity/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oppty/DRs (End Customer Lookup)</relationshipLabel>
    <relationshipName>Oppty_DRs1</relationshipName>
    <type>Lookup</type>
</CustomField>