src/objects/Opportunity/fields/Epiworks_RPS_Number__c.field-meta.xml
<CustomField>
    <fullName>Epiworks_RPS_Number__c</fullName>
    <label>Epiworks RPS Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>