src/objects/Opportunity/fields/EUV__c.field-meta.xml
<CustomField>
    <fullName>EUV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator that this is an Extreme Ultra Violet Opportunity</description>
    <inlineHelpText>Extreme ultraviolet opportunity</inlineHelpText>
    <label>EUV</label>
    <type>Checkbox</type>
</CustomField>