src/objects/Opportunity/fields/Global_Account_Manager_GAM__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Manager_GAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Account Manager (GAM)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>GAM Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>RSM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opptys_DRs</relationshipName>
    <type>Lookup</type>
</CustomField>