src/objects/Opportunity/fields/Glovia_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Opportunity_Number__c</fullName>
    <inlineHelpText>Sales Order number entered here from Glovia once a new order has been entered.</inlineHelpText>
    <label>Glovia Opportunity #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>