src/objects/Opportunity/fields/GRAX_Amount__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Amount__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GRAX Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>