src/objects/Opportunity/fields/GRAX_Universal__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Universal__c</fullName>
    <formula>Account.GRAX_Universal__c</formula>
    <label>GRAX Universal</label>
    <type>Text</type>
</CustomField>