src/objects/Opportunity/fields/Highlight_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Highlight_for_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highlight for Review</label>
    <type>Checkbox</type>
</CustomField>