src/objects/Opportunity/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>info from converted leads</description>
    <inlineHelpText>Info from converted leads</inlineHelpText>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>