src/objects/Opportunity/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Created for use in an Account formula field.</description>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>