src/objects/Opportunity/fields/Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Lost_To__c</fullName>
    <label>Lost To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acacia</fullName>
            </value>
            <value>
                <fullName>Accelink</fullName>
            </value>
            <value>
                <fullName>AOI</fullName>
            </value>
            <value>
                <fullName>CoAdna*</fullName>
            </value>
            <value>
                <fullName>FOIT (Foxconn Optical Interconnect Technology)</fullName>
            </value>
            <value>
                <fullName>FOC (Fujitsu Optical Components)</fullName>
            </value>
            <value>
                <fullName>Hisense</fullName>
            </value>
            <value>
                <fullName>II-VI</fullName>
            </value>
            <value>
                <fullName>Innolight</fullName>
            </value>
            <value>
                <fullName>JDSU*</fullName>
            </value>
            <value>
                <fullName>Lumentum</fullName>
            </value>
            <value>
                <fullName>NeoPhotonics</fullName>
            </value>
            <value>
                <fullName>Nistica*</fullName>
            </value>
            <value>
                <fullName>Oclaro</fullName>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Sumitomo</fullName>
            </value>
            <value>
                <fullName>Mellanox</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Acacia</fullName>
                <isActive>false</isActive>
                <label>Acacia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>