src/objects/Opportunity/fields/Lost_to_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Details__c</fullName>
    <label>Lost Rejected Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>