src/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>IF (Amount &gt; 0, ( Amount  -  Total_Cost__c ) / Amount, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Amount - Cost) / Amount</inlineHelpText>
    <label>Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>