src/objects/Opportunity/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Consumer</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 - DSP</fullName>
            </value>
            <value>
                <fullName>15 - Industrial</fullName>
            </value>
            <value>
                <fullName>20 - Telecommunications</fullName>
            </value>
            <value>
                <fullName>30 - Medical</fullName>
            </value>
            <value>
                <fullName>25 - Automotive</fullName>
            </value>
            <value>
                <fullName>35 - Consumer</fullName>
            </value>
            <value>
                <fullName>40 - Personal Comfort</fullName>
            </value>
            <value>
                <fullName>60 - Power Generation</fullName>
            </value>
            <value>
                <fullName>80 - Contracts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>