src/objects/Opportunity/fields/Market_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Market_TEXT__c</fullName>
    <description>Text formula field to display market for II-VI Market field</description>
    <formula>TEXT(Market__c)</formula>
    <label>Market TEXT</label>
    <type>Text</type>
</CustomField>