src/objects/Opportunity/fields/Marketing_PN__c.field-meta.xml
<CustomField>
    <fullName>Marketing_PN__c</fullName>
    <label>Marketing PN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>