src/objects/Opportunity/fields/Marlow_Product_BU__c.field-meta.xml
<CustomField>
    <fullName>Marlow_Product_BU__c</fullName>
    <label>Marlow Product BU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Components</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>